--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "date-fns": "^2.16.0",
+    "express": "^4.17.1",
+    "uuidv4": "^6.2.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
