--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,8 @@
         "ts": "never"
       }
     ],
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "class-methods-use-this": "off"
   },
   "settings": {
     "import/resolver": {
