fix/Liskov Substitution Principle

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,17 @@
       "error",
       { "argsIgnorePattern": "_" }
     ],
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": "interface",
+        "format": ["PascalCase"],
+        "custom": {
+          "regex": "^I[A-Z]",
+          "match": true
+        }
+      }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
